# rag-exploration

./: .gitignore  RAG技术路线选型指南.md  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
api/routers/: bm25.py  chunking.py  embedding.py  enhanced_rag.py  eval.py  rag.py  reranking.py
api/services/: bm25_service.py  chunking_service.py  embedding_service.py  enhanced_rag_service.py  eval_service.py  knowledge_base.py  rag_service.py  reranking_service.py
docs/: embedding-vs-bm25-analysis.md  issues-and-analysis.md
evaluation/: eval_demo.py
preprocessing/: chunking_demo.py
route_a_bm25/: bm25_demo.py
route_b_embedding/: embedding_demo.py  hybrid_search.py  reranking_demo.py  visualize_vectors.py
route_c_full_rag/: lightrag_demo.py  simple_rag_demo.py  visualize_pipeline.py
sample_docs/: knowledge_base.json
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/route-a/: page.tsx
web/src/app/route-b/: ChunkingTab.tsx  EvaluationTab.tsx  RerankingTab.tsx  page.tsx
web/src/app/route-c/: page.tsx
web/src/components/: CitedText.tsx  PipelineStep.tsx  ResultCard.tsx  ScoreBar.tsx  SearchInput.tsx  StreamingText.tsx  theme-toggle.tsx
web/src/lib/: api.ts
